--- a/urbnmg/package.json
+++ b/urbnmg/package.json
@@ -6,6 +6,8 @@
     "cra-template": "1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-faq-component": "1.0.8",
+    "react-fullpage-accordion": "^4.3.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
